--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-numpy>=1.18,<=1.23
-scipy>=1.3.0
-pandas>=1.0.3
-psychopy>=2020.1.2
-pyserial>=3.4
-matplotlib>=3.3.3
-seaborn>=0.11.1
-pingouin>=0.3.10
-papermill>=2.3.1
-systole>=0.2.3
-setuptools>=38.4
+numpy
+scipy
+pandas
+psychopy
+pyserial
+matplotlib
+seaborn
+pingouin
+papermill
+systole
+setuptools
 packaging
+cbitstruct
+pylsl
